scss/partials/_shared_misc.scss
/* ... */
section.testimonials-section {
  text-align: center;
  padding: 120px 0px !important;
  position: relative;

  &:before {
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: #F8F7F3;
    border-bottom-right-radius: 200px;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;

    @include tablet() {
      border-bottom-right-radius: 100px;
    }
  }

  @include tablet() {
    width: 100%;
    padding: 80px 24px !important;
    padding-top: 80px !important;
    padding-bottom: 80px !important;
    text-align: center;
  }

  @include tablet() {
    width: 100%;
    padding: 80px 24px;
  }

  div.testimonials-section-title {
    @include PTSerif()
    color: $deep_navy;
    font-size: 40px;
    line-height: 38px;
    position: relative;

    @include tablet(){
      font-size: 26px;
      line-height: auto;
    }
  }

  div.testimonials-section-subtitle {
    @include avenir_R();
    font-size: 24px;
    line-height: 32px;
    color: $deep_navy;
    margin-top: 16px;
    position: relative;

    @include tablet(){
      font-size: 20px;
      line-height: 26px;
    }
  }

  div.testimonials-cards-container {
    // width: 1194px;
    width: 834px;
    margin: 55px auto 0px;
    position: relative;

    // @media screen and (max-width: 1193px) {
    @media screen and (max-width: 833px) {
      width: 100%;
      margin: 42px auto 0px;
    }

    div.testimonial-card {
      float: left;
      width: 362px;
      padding-left: 32px;
      margin-left: 48px;
      text-align: left;
      position: relative;

      &:before {
        content: "";
        width: 8px;
        height: 100%;
        position: absolute;
        top: 0;
        left: 0;
        border-radius: 100px;
        background-color: rgba(#54C58C, 0.2);
      }

      &.skylight {
        div.testimonial-header {
          div.testimonial-logo {
            width: 89px;
            height: 24px;
            @include image-2x("/img/ML/testimonial_1_logo");
            background-size: 89px 24px;
          }
        }

        div.testimonial-footer {
          div.testimonial-image {
            @include image-2x("/img/ML/testimonial_1_image");
          }
        }
      }

      &.m-io {
        div.testimonial-header {
          div.testimonial-logo {
            width: 11px;
            height: 32px;
            @include image-2x("/img/ML/testimonial_2_logo");
            background-size: 11px 32px;
          }
        }

        div.testimonial-footer {
          div.testimonial-image {
            @include image-2x("/img/ML/testimonial_2_image");
          }
        }
      }

      &.wayne-edu {
        float: right;

        div.testimonial-header {
          div.testimonial-logo {
            width: 234px;
            height: 24px;
            @include image-2x("/img/ML/testimonial_3_logo");
            background-size: 234px 24px;
          }
        }

        div.testimonial-footer {
          div.testimonial-image {
            @include image-2x("/img/ML/testimonial_3_image");
          } 
        }
      }

      div.testimonial-header {
        a, a:active, a:focus {
          text-decoration: none;
        }

        div.testimonial-logo {
          float: left;
          background-position: center;
          background-repeat: no-repeat;
        }
      }

      div.testimonial-quote {
        @include avenir_M();
        font-size: 16px;
        color: $deep_navy;
        line-height: 20px;

        @include tablet() {
          min-height: 80px;
        }

        &:not(:first-child){
          padding-top: 16px;
        }
      }

      div.testimonial-footer {
        margin-top: 16px;

        div.testimonial-image {
          width: 40px;
          height: 40px;
          border-radius: 50%;
          background-position: center;
          background-size: 40px 40px;
          background-repeat: no-repeat;
          margin-right: 16px;
          float: left;
        }

        div.testimonial-name {
          @include PTSerif()
          font-size: 16px;
          color: $deep_navy;
          line-height: 20px;
        }

        div.testimonial-role {
          @include avenir_R();
          font-size: 14px;
          color: rgba($ui_grey, 0.6);
          line-height: 19px;
          overflow: hidden;
          text-overflow: ellipsis;
          white-space: nowrap;
          margin-top: 4px;
        }
      }

      // @media screen and (max-width: 1193px) {
      @media screen and (max-width: 833px) {

        float: unset;
        margin: 40px auto 0;
        width: 100%;
        max-width: 440px;
        float: unset;

        &:nth-child(3) {
          float: unset;
        }
      }

      &:not(:first-child) {
        margin-left: 30px;

        // @media screen and (max-width: 1193px) {
        @media screen and (max-width: 833px) {
          margin: 40px auto 0;
        }
      }
    }
  }
}

section.keep-aligned {
  padding: 120px 0px;
  text-align: center;

  @include tablet() {
    width: 100%;
    padding: 72px 24px;
    padding-top: 72px !important;
    padding-bottom: 72px !important;
    text-align: left;
  }

  @include mobile_to_tablet(){
    padding: 0 24px;
  }

  div.keep-aligned-title {
    @include PTSerif()
    font-size: 32px;
    color: $deep_navy;
    margin-bottom: 40px;
    text-align: center;

    @include tablet() {
      font-size: 36px;
      margin-bottom: 24px;
    }
  }

  button.get-started-button {
    margin-top: 0px;
  }

  div.no-credit-card {
    @include avenir_R();
    color: $ui_grey;
    font-size: 16px;
    margin-top: 24px;
    text-align: center;

    @include tablet() {
      font-size: 12px;
    }
  }
}
/* ... */

